--- a/Frontend/angular-ecommerce/src/index.html
+++ b/Frontend/angular-ecommerce/src/index.html
@@ -10,6 +10,7 @@
   <title>Prash - Full Stack Ecommerce - Angular and Spring Boot</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://js.stripe.com/v3" async></script>
 </head>
 <body>
   <app-root></app-root>
